<resources>
    <string name="app_name">FutbolitoApp</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="mostrar_torneo">Mostrar Torneo</string>
    <string name="tabla_de_posiciones">Tabla de posiciones</string>
    <string name="buscar_torneos">Buscar Torneos</string>
    <string name="nombre_equipo">Nombre del equipo: %1$s</string>
    <string name="nom_equipo">Equipo %l$s</string>
    <string name="pj_equipo">PJ</string>
    <string name="pg_equipo">PG</string>
    <string name="pe_equipo">PE</string>
    <string name="pp_equipo">PP</string>
    <string name="gf_equipo">GF</string>
    <string name="gc_equipo">GC</string>
    <string name="gd_equipo">GD</string>
    <string name="pts_equipo">PTS</string>
    <string name="nombre_torneo">Torneo Anio</string>
    <string name="fecha_partido">yyyy/mm/dd</string>
    <string name="equipo_local">EquipoL</string>
    <string name="equipo_visitante">EquipoV</string>
    <string name="gol_local">#L</string>
    <string name="gol_visitante">#V</string>
    <string name="nombre_jugador">Nombre</string>
    <string name="num_camiseta">Cam:</string>
    <string name="rol_jugador">Rol</string>
    <color name="colorSeparator">#33691e</color>
    <color name="colorHeader">#388e3c</color>
    <color name="colorApp">#1b5e20</color>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_jugador">JugadorActivity</string>
</resources>
