<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id = "@+id/relativeLayout1"
    android:layout_width = "match_parent"
    android:layout_height = "wrap_content"
    android:paddingTop="10dp"
    android:paddingBottom="10dp">

    <TextView
        android:layout_width = "0dp"
        android:layout_height="wrap_content"
        android:layout_weight = "1"
        android:text="@string/rol_jugador"
        android:id="@+id/rol_jugador"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_span="1"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight = "1"
        android:text="@string/num_camiseta"
        android:id="@+id/num_camiseta"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:layout_span="1"/>

    <TextView
        android:layout_width = "0dp"
        android:layout_height="wrap_content"
        android:layout_weight = "6"
        android:text="@string/nombre_jugador"
        android:id="@+id/nombre_jugador"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_span="1"/>

    <TextView
        android:layout_width = "0dp"
        android:layout_height="wrap_content"
        android:layout_weight = "0"
        android:text=""
        android:id="@+id/id_jugador"
        android:textStyle="bold"
        android:paddingLeft="30dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:visibility="gone"/>

</LinearLayout>